service.yml
apiVersion: v1
kind: Service
metadata:
  name: restaurant-menu-service
  namespace: prod
spec:
  selector:
    app: restaurant-menu
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
