ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restaurant-menu-ingress
  namespace: prod
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: restaurant-menu-service
                port:
                  number: 80
